crates/service/tests/hover/snapshots/features__hover__instr__block.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nnop\n```\n\n**Binary opcode**: `0x01`\n\n```wat\n[] -> []\n```\n\n---\n\n**Stack before**: `[f64]`"
  },
  "range": {
    "start": {
      "line": 6,
      "character": 5
    },
    "end": {
      "line": 6,
      "character": 8
    }
  }
}
