crates/service/tests/hover/snapshots/features__hover__instr__init_stack_block_if_then.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ndrop\n```\n\n**Binary opcode**: `0x1A`\n\n```wat\n[i32] -> []\n```\n\n---\n\n**Stack before**: `[i32]`"
  },
  "range": {
    "start": {
      "line": 5,
      "character": 13
    },
    "end": {
      "line": 5,
      "character": 17
    }
  }
}
