crates/service/tests/hover/snapshots/features__hover__instr__init_stack_func.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ndrop\n```\n\n**Binary opcode**: `0x1A`\n\n```wat\n[any] -> []\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 4
    },
    "end": {
      "line": 3,
      "character": 8
    }
  }
}
