crates/service/tests/hover/snapshots/features__hover__instr__instr_name.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ni32.const\n```\n\n**Binary opcode**: `0x41`\n\n```wat\n[] -> [i32]\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 20
    }
  }
}
