crates/service/tests/hover/snapshots/features__hover__instr__ref_cast_with_abbr_ref.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nref.cast\n```\n\n**Binary opcode**: `0xFB 0x17`\n\n```wat\n[(ref null any)] -> [(ref null any)]\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 4
    },
    "end": {
      "line": 3,
      "character": 12
    }
  }
}
